--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('app/assets/fonts/UnimedSlab/font-face.css');
+@import url('app/assets/fonts/UnimedSans/font-face.css');
+
+body {
+  font-family: 'UnimedSans', sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #334155;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  font-family: 'UnimedSans', sans-serif;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'UnimedSlab', serif;
+  font-weight: 700;
+  color: #009ddb;
+}
+
+span {
+  font-weight: 400;
+  color: #586880;
+}
