--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,12 @@
 @import url('app/assets/fonts/UnimedSlab/font-face.css');
 @import url('app/assets/fonts/UnimedSans/font-face.css');
 
-body {
+html {
+  font-size: 1rem;
   font-family: 'UnimedSans', sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  color: #334155;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  font-family: 'UnimedSans', sans-serif;
-  font-weight: 400;
+  color: #586880;
 }
 
 h1,
@@ -26,7 +20,7 @@ h6 {
   color: #009ddb;
 }
 
-span {
+.text-subtitle {
+  font-family: 'UnimedSans', sans-serif;
   font-weight: 400;
-  color: #586880;
 }
