--- a/src/app/components/search-box/search-box.html
+++ b/src/app/components/search-box/search-box.html
@@ -1,16 +1,26 @@
 <p-card>
-  <div>
-    <input type="text" pInputText />
-    <input type="text" pInputText />
-    <input type="text" pInputText />
-  </div>
-  <div>
-    <input type="text" pInputText />
-    <input type="text" pInputText />
-  </div>
-  <p-divider />
-  <div>
-    <p-button [outlined]="true" severity="secondary">Limpar filtros</p-button>
-    <p-button>Buscar</p-button>
+  <div class="grid">
+    <div class="col">
+      <input type="text" pInputText />
+      <p-float-label variant="in">
+        <p-date-picker inputId="fromDate" showIcon iconDisplay="input" />
+        <label for="fromDate">A partir de (dd/mm/aaa)</label>
+      </p-float-label>
+    </div>
+    <div class="col">
+      <input type="text" pInputText />
+      <p-float-label variant="in">
+        <p-date-picker inputId="toDate" showIcon iconDisplay="input" />
+        <label for="toDate">Até (dd/mm/aaa)</label>
+      </p-float-label>
+    </div>
+    <div class="col">
+      <input type="text" pInputText />
+    </div>
+    <p-divider />
+    <div>
+      <p-button [outlined]="true" severity="secondary">Limpar filtros</p-button>
+      <p-button>Buscar</p-button>
+    </div>
   </div>
 </p-card>
