style: adiciona spacing nos elementos

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,9 @@
-<div>
-  <div>
-    <h1>Filtros e Busca</h1>
-    <p-divider />
+<div class="flex flex-column">
+  <div class="flex flex-column gap-4">
+    <div>
+      <h1>Filtros e Busca</h1>
+      <p-divider />
+    </div>
     <span> Busque por cotações preenchidas ou propostas solicitadas. </span>
     <app-search-box />
   </div>
