feat: cria componente de resultado de busca

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,11 +4,14 @@
       <h1>Filtros e Busca</h1>
       <p-divider />
     </div>
-    <span> Busque por cotações preenchidas ou propostas solicitadas. </span>
+    <span>Busque por cotações preenchidas ou propostas solicitadas.</span>
     <app-search-box />
   </div>
   <div>
-    <h1>Resultados</h1>
-    <p-divider />
+    <div>
+      <h1>Resultados</h1>
+      <p-divider />
+    </div>
+    <app-search-result />
   </div>
 </div>
