feat: cria feature de reprocessamento de integrações

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,1 @@
-<div class="flex flex-column">
-  <div class="flex flex-column gap-4">
-    <div>
-      <h1>Filtros e Busca</h1>
-      <p-divider />
-    </div>
-    <span>Busque por cotações preenchidas ou propostas solicitadas.</span>
-    <app-search-box />
-  </div>
-  <div>
-    <div>
-      <h1>Resultados</h1>
-      <p-divider />
-    </div>
-    <app-search-result [cenarios]="cenarios()" />
-  </div>
-</div>
+<div class="flex flex-column"></div>
