fix: corrige binding

--- a/src/app/features/integrations-logs/integrations-logs.html
+++ b/src/app/features/integrations-logs/integrations-logs.html
@@ -12,6 +12,6 @@
       <h1>Resultados</h1>
       <p-divider />
     </div>
-    <app-search-result [cenarios]="cenarios()" />
+    <app-search-result [cenarios]="cenarios" />
   </div>
 </div>
