--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import 'primeflex/primeflex.css';
+
 @import url('assets/fonts/UnimedSlab/font-face.css');
 @import url('assets/fonts/UnimedSans/font-face.css');
 
