feat: corrige tamanho miními do container

--- a/src/app/shared/components/app-layout/app-layout.html
+++ b/src/app/shared/components/app-layout/app-layout.html
@@ -1,4 +1,4 @@
-<div class="flex flex-column">
+<div class="flex flex-column min-h-screen">
   <header class="flex">
     <p-menubar class="w-full" [model]="options" />
   </header>
