feat: adiciona componentes de filtro e resultado

--- a/src/app/features/configurations/configurations.html
+++ b/src/app/features/configurations/configurations.html
@@ -1,1 +1,12 @@
-<p>configurations works!</p>
+<div>
+  <div>
+    <h1>Filtros</h1>
+  </div>
+  <div>
+    <app-search-box />
+  </div>
+  <div>
+    <h1>Resultados</h1>
+    <p-data-view></p-data-view>
+  </div>
+</div>
