--- a/src/app/features/integrations-logs/integrations-logs.html
+++ b/src/app/features/integrations-logs/integrations-logs.html
@@ -1,17 +1,12 @@
 <div>
-  <div class="flex flex-column gap-4">
-    <div>
-      <h1>Filtros e Busca</h1>
-      <p-divider />
-    </div>
-    <span>Busque por cotações preenchidas ou propostas solicitadas.</span>
+  <div>
+    <h1>Filtros</h1>
+  </div>
+  <div>
     <app-search-box />
   </div>
   <div>
-    <div>
-      <h1>Resultados</h1>
-      <p-divider />
-    </div>
+    <h1>Resultados</h1>
     <app-search-result [cenarios]="cenarios" />
   </div>
 </div>
