feat: cria componente de resultado de busca

--- a/src/app/features/configurations/configurations.html
+++ b/src/app/features/configurations/configurations.html
@@ -7,6 +7,6 @@
   </div>
   <div>
     <h1>Resultados</h1>
-    <p-data-view></p-data-view>
+    <app-search-result [result]="result" />
   </div>
 </div>
